--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,51 @@
 body {
-    background-color: #ddd;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI, Helvetica Neue, sans-serif;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+.cointainer {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.languages {
+  display: flex;
+  justify-content: center;
+}
+
+.languages li {
+  margin: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.popular-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.popular-item {
+  margin: 20px;
+  text-align: center;
+}
+
+.space-list-items {
+  margin-bottom: 7px;
+}
+
+.avatar {
+  width: 130px;
+  border-radius: 50%;
+}
+
+.popular-rank {
+  font-size: 20px;
 }
